Fixed the issues with the contact section not being the right width for ipad viewers, hopefully have also made the skills section become interactive on mobile

--- a/style.css
+++ b/style.css
@@ -295,6 +295,11 @@ header li {
     .git p {
         width: 60%;
     }
+
+    .contact_nav li {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 
